Finished ShExSchemaFactory